<resources>
    <string name="app_name">DevTool</string>
    <string name="action_settings">Settings</string>

    <string name="accelero_gravity_lowpass_head">Gravity (LOW PASS)</string>
    <string name="accelero_acc_lowpass_head">Acceleration (LOW PASS)</string>
    <string name="gravity_raw_head">Gravity(RAW)</string>
    <string name="gyroscoop_head">Gyroscoop</string>
    <string name="magnetometer_head">Magnetometer</string>
    <string name="rotation_head">Rotation</string>


    <string name="sensor_x">x</string>
    <string name="sensor_y">y</string>
    <string name="sensor_z">z</string>
    <string name="sensor_samplerate">Sample rate</string>

    <string name="user_tag">Email</string>
    <string name="user_password">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>

    <string-array name="SensorList">
        <item>Stopwatch</item>
        <item>Login</item>
        <item>Gravity(RAW)</item>
        <item>Accelerometer</item>
        <item>Gyroscope</item>
        <item>Magnetometer</item>
        <item>Rotation</item>
        <item>Save Hello World</item>
    </string-array>

    <string name="timer">00:00:00</string>
    <string name="startText">START</string>
    <string name="resetText">RESET</string>
    <string name="stopText">PAUSE</string>

    <string name="filewriter">File Writer</string>
    <string name="rotation">Rotation</string>
    <string name="magneetomeeter">Magnetometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="accelo">Accelerometer</string>
    <string name="gravityR">Gravity Raw</string>
    <string name="login">Login</string>
    <string name="stopwatch">Stopwatch</string>


</resources>
