<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/stopwatch" android:title="@string/stopwatch" android:icon="@drawable/stopwatch" app:showAsAction="ifRoom"/>
    <item android:id="@+id/login" android:title="@string/login" android:icon="@drawable/login_in" app:showAsAction="ifRoom"/>
    <item android:id="@+id/gravityR" android:title="@string/gravityR" android:icon="@drawable/gravity" app:showAsAction="ifRoom"/>
    <item android:id="@+id/accelo" android:title="@string/accelo" android:icon="@drawable/accelerometer" app:showAsAction="ifRoom"/>
    <item android:id="@+id/gyroscope" android:title="@string/gyroscope" android:icon="@drawable/gyroscope" app:showAsAction="ifRoom"/>
    <item android:id="@+id/magneetometer" android:title="@string/magneetomeeter" android:icon="@drawable/magneet" app:showAsAction="ifRoom"/>
    <item android:id="@+id/rotation" android:title="@string/rotation" android:icon="@drawable/rotation" app:showAsAction="ifRoom"/>
    <item android:id="@+id/fileWriter" android:title="@string/filewriter" android:icon="@drawable/writer" app:showAsAction="ifRoom"/>
</menu>
