<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"


    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/magnetometer_head"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        />
    <RelativeLayout
        android:layout_marginBottom="30dp"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startText"
            android:id="@+id/btnStartM"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopText"
            android:layout_alignParentRight="true"
            android:id="@+id/btnStopM"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_x"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvX"
        android:textColor="#ffff0000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_y"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvY"
        android:textColor="#ffff0000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_z"
        android:layout_marginTop="30dp"

        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvZ"
        android:textColor="#ffff0000"/>

    <TextView android:text="@string/sensor_samplerate" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffff0000"
        android:id="@+id/tvSampleRate"/>



</LinearLayout>
</ScrollView>