<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical"
        >



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/accelero_gravity_lowpass_head"
            />

        <TextView android:text="@string/sensor_x" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/x"
            android:textColor="#ffff0000"
            />

        <TextView android:text="@string/sensor_y" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/y"
            android:textColor="#ffff0000"
            />

        <TextView android:text="@string/sensor_z" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff0000"
            android:id="@+id/z"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/accelero_acc_lowpass_head"
            android:layout_marginTop="50dp"
            />
        <TextView android:text="@string/sensor_x" android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/x2"
            android:textColor="#ffff0000"
            />

        <TextView android:text="@string/sensor_y" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/y2"
            android:textColor="#ffff0000"
            />

        <TextView android:text="@string/sensor_z" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff0000"
            android:id="@+id/z2"/>

        <TextView android:text="@string/sensor_samplerate" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff0000"
            android:id="@+id/sampling"/>

    </LinearLayout>
    </ScrollView>


